--- a/.github/workflows/temperature.yml
+++ b/.github/workflows/temperature.yml
@@ -24,4 +24,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python test_temperature_converter.py  # Replace this with the command to run your tests
+        python ../tests/test_temperature_converter.py  # Replace this with the command to run your tests
